# devgill-django

./: .gitignore  README.md  pyproject.toml
accounts/: forms.py  tests.py
accounts/migrations/: 0001_initial.py
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_date.py  0003_alter_post_date.py  0004_alter_post_date.py  0005_alter_post_date.py  0006_post_slug.py  0007_alter_post_slug.py  0008_alter_post_slug.py  0009_alter_post_options_alter_post_body.py
core/: settings.py  urls.py
home/: tests.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_delete_post.py
static/css/: about.css  base.css  blog.css  blog_actions.css  blog_crud.css  blog_post.css  contact.css  index.css
static/css/registration/: accounts.css  login.css  signup.css
static/js/: base.js  blog_post.js
templates/: about.html  base.html  blog.html  blog_delete.html  blog_edit.html  blog_new.html  blog_post.html  contact.html  index.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
