[tool.poetry]
name = "devgill"
version = "0.1.0"
description = "Personal Blog"
authors = ["Gill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
readtime = "^2.0.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
