[tool.poetry]
name = "devgill-django"
version = "0.1.0"
description = "Personal Blog built with Django"
authors = ["Dev Gill"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
readtime = "^2.0.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-tinymce = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
